[#11] fix all pages overflow bug

--- a/src/structure/main.css
+++ b/src/structure/main.css
@@ -26,5 +26,9 @@
       @apply shadow-lg;
       @apply border border-gray-200;
     }
+
+    & .rm-all-pages {
+      @apply overflow-hidden;
+    }
   }
 }
